# fleetops-gateway

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: Architecture.md  PRD.md
docs/ADR/: 0001-platform.md
ros_ws/src/fleetops_health/: CMakeLists.txt  package.xml
ros_ws/src/fleetops_health/include/fleetops_health/: timeout.hpp
ros_ws/src/fleetops_health/launch/: fleetops.launch.py
ros_ws/src/fleetops_health/src/: health_supervisor.cpp
ros_ws/src/fleetops_health/test/: test_timeout.cpp
ros_ws/src/fleetops_heartbeat/: CMakeLists.txt  package.xml
ros_ws/src/fleetops_heartbeat/src/: heartbeat_publisher.cpp
ros_ws/src/fleetops_msgs/: CMakeLists.txt  package.xml
ros_ws/src/fleetops_msgs/msg/: Fault.msg  Heartbeat.msg  RobotHealth.msg
